Update for swift 2.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Build
 RichTextView.xcodeproj/project.xcworkspace/xcuserdata/kevin.xcuserdatad/UserInterfaceState.xcuserstate
+.DS_Store
+xcuserdata
+zhowkevin.xcuserdatad
